fixed post links being too small by... adding invisible text
i really wish i knew why this worked so i could fix the root cause, but this is the only solution i found

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -87,6 +87,10 @@ p {
     list-style-type: none;
 }
 
+.invisible-text {
+    visibility: hidden;
+}
+
 .post-list li,
 .project-list li {
     margin: 15px;
